# Gemini-API

./: .gitignore  README.md  pyproject.toml
src/gemini_webapi/: __init__.py  client.py  constants.py  exceptions.py  http_client.py
src/gemini_webapi/components/: __init__.py  gem_mixin.py
src/gemini_webapi/types/: __init__.py  candidate.py  gem.py  image.py  modeloutput.py  video.py
src/gemini_webapi/utils/: __init__.py  decorators.py  get_access_token.py  load_browser_cookies.py  load_netscape_cookies.py  logger.py  parsing.py  rotate_1psidts.py  upload_file.py
tests/: test_client_features.py  test_gem_mixin.py  test_save_image.py
