[build-system]
requires = ["setuptools>=69", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-webapi"
authors = [{ name = "UZQueen" }]
description = "✨ An elegant async Python wrapper for Google Gemini web app"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["API", "async", "Gemini", "Bard", "Google", "Generative AI", "LLM"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "curl_cffi>=0.9.0",
    "loguru~=0.7.3",
    "orjson~=3.11.7",
    "pydantic~=2.12.5",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["ruff>=0.11"]

[project.urls]
Repository = "https://github.com/HanaokaYuzu/Gemini-API"
Issues = "https://github.com/HanaokaYuzu/Gemini-API/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gemini_webapi"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 200
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "A",     # flake8-builtins (prevent shadowing builtins)
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "PERF",  # Perflint
    "FAST",  # FastAPI
    "ICN",   # flake8-import-conventions
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
    "PTH",   # flake8-use-pathlib
    "RUF",   # Ruff-specific rules
    "B",     # flake8-bugbear
    "I",     # isort
]
ignore = [
    "E501",     # Allow long lines (common in log messages with f-strings)
    "ASYNC109", # False positives on timeout parameters (not asyncio.wait_for)
    "ASYNC230", # Blocking open() in async - acceptable in test files
    "ASYNC240", # Blocking pathlib methods in async - acceptable for file validation before upload
    "PERF203",  # try-except in loop is acceptable when needed for individual error handling
    "N818",     # Exception naming - keep existing names for backward compatibility
    "RUF003",   # Ambiguous unicode in comments - intentional mathematical symbols
    "RUF012",   # Mutable class attribute - intentional for Enum values
    "SIM108",   # Ternary operator - keep if/else for readability with complex conditions
]

[tool.ruff.lint.isort]
known-first-party = ["gemini_webapi"]
